--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "crypto-js": "^4.0.0",
-    "nuxt": "^2.0.0"
+    "global": "^4.4.0",
+    "nuxt": "^2.0.0",
+    "pm2": "^4.2.3"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.0.0",
